2005-11-30  Murray Cumming <murrayc@murrayc.com>
  
	* configure.in:
	* gtk/gtkmmconfig.h.in: Check for the mkifofs() 
	function (not available in windows, apparently), and 
	define HAVE_MKIFOFS.
	* examples/book/input/main.cc: Do not use mkifofs 
	if it is not present, to fix build on Windows.
	Bug #309031 from haleykd.

2005-11-30  Murray Cumming <murrayc@murrayc.com>

	* docs/reference/Doxyfile.in: Added ALIASES 
	for @newin2p2, @newin2p4, @newin2p6, @newin2p8, and 
	@newin2p10. API marked with these tags will then be 
	listed together on a page. Doxygen already has @since, 
	but that does not list them on one page.
	* gdk/src/displaymanager.hg:
	* gtk/gtkmm/accelmap.h:
	* gtk/src/cellrenderer.hg:
	* gtk/src/clipboard.hg:
	* gtk/src/colorbutton.hg:
	* gtk/src/entrycompletion.hg:
	* gtk/src/expander.hg:
	* gtk/src/filechooserwidget.hg:
	* gtk/src/messagedialog.hg:
	* gtk/src/radiotoolbutton.hg:
	* gtk/src/rc.hg:
	* gtk/src/uimanager.hg:
	* pango/src/fontset.hg: Replace any Since: text with 
	the new tags.

2005-11-29  Murray Cumming <murrayc@murrayc.com>

	* build_shared/Makefile_build.am_fragment:
	* configure.in: Added --enable-deprecated-api option: 
	Set it to yes to remove deprecated API from the library, 
	for instance for embedded devices.
	* gdk/src/color.ccg:
	* gdk/src/color.hg:
	* gdk/src/colormap.ccg:
	* gdk/src/colormap.hg:
	* gdk/src/image.hg:
	* gdk/src/window.hg:
	* gtk/src/calendar.hg:
	* gtk/src/cellrenderer.hg:
	* gtk/src/combo.hg:
	* gtk/src/fileselection.hg:
	* gtk/src/inputdialog.hg:
	* gtk/src/messagedialog.hg:
	* gtk/src/optionmenu.hg:
	* gtk/src/progress.hg:
	* gtk/src/textbuffer.ccg:
	* gtk/src/textbuffer.hg:
	* gtk/src/textview.ccg:
	* gtk/src/textview.hg:
	* gtk/src/toolbar.hg:
	* gtk/src/treemodel.hg:
	* gtk/src/treemodelfilter.hg:
	* gtk/src/treepath.ccg:
	* gtk/src/treepath.hg:
	* gtk/src/treesortable.ccg:
	* gtk/src/treesortable.hg:
	* gtk/src/treeview.ccg:
	* gtk/src/treeview.hg:
	* gtk/src/treeviewcolumn.ccg: