@@ -138,6 +138,7 @@
             <li>Class Chart (image)</li>
             <li><a href="reference/html/classes.html">All Classes</a></li>
             <li><a href="reference/html/functions.html">All methods (long)</a></li>
+            <li><a href="reference/html/pages.html">Deprecated and new API</a></li>
 
            </ul>
           </td>
