@@ -62,7 +62,7 @@ The Gtk::Window::get_position() documentation may also be relevant.
 <description>
 List all currently open displays.
 
-
+@newin2p2
 </description>
 <parameters>
 <parameter name="display_manager">
@@ -71,7 +71,6 @@ List all currently open displays.
 </parameter>
 </parameters>
 <return> a list of #GdkDisplay objects.
-Since: 2.2
 </return>
 </function>
 
@@ -82,7 +81,7 @@ Since: 2.2
 Obtains a list of all toplevel windows known to GDK on the screen @screen.
 A toplevel window is a child of the root window (see
 gdk_get_default_root_window()).
-
+@newin2p2
 </description>
 <parameters>
 <parameter name="screen">
@@ -91,8 +90,6 @@ gdk_get_default_root_window()).
 </parameter>
 </parameters>
 <return> list of toplevel windows.
-
-Since: 2.2
 </return>
 </function>
 
@@ -104,7 +101,7 @@ Lists the available visuals for the specified @screen.
 A visual describes a hardware image data format.
 For example, a visual might support 24-bit color, or 8-bit color,
 and might expect pixels to be in a certain format.
-
+@newin2p2
 </description>
 <parameters>
 <parameter name="screen">
@@ -113,8 +110,6 @@ and might expect pixels to be in a certain format.
 </parameter>
 </parameters>
 <return> a list of visuals.
-
-Since: 2.2
 </return>
 </function>
 
@@ -172,8 +167,7 @@ an equal number of times to begin processing exposes.
 Gets the current location of the pointer and the current modifier
 mask for a given display.
 
-Since: 2.2
-
+@newin2p2
 </description>
 <parameters>
 <parameter name="display">
@@ -286,7 +280,7 @@ display. This is only useful for such low-level tools as an
 event recorder. Applications should never have any
 reason to use this facility.
 
-
+@newin2p2
 </description>
 <parameters>
 <parameter name="display">
@@ -300,8 +294,6 @@ quantities related to the current pointer position.
 </parameter>
 </parameters>
 <return> the previous pointer hook table
-
-Since: 2.2
 </return>
 </function>
 
@@ -310,7 +302,7 @@ Since: 2.2
 Determines the name to pass to gdk_display_open() to get
 a #GdkDisplay with this screen as the default screen.
 
-
+@newin2p2
 </description>
 <parameters>
 <parameter name="screen">
@@ -319,8 +311,6 @@ a #GdkDisplay with this screen as the default screen.
 </parameter>
 </parameters>
 <return> The name.
-
-Since: 2.2
 </return>
 </function>
 
