@@ -1136,7 +1136,7 @@ Generates a string representation of the iter. This string is a &apos;:&apos;
 separated list of numbers. For example, &quot;4:10:0:3&quot; would be an
 acceptable return value for this string.
 
-
+@newin2p2
 </description>
 <parameters>
 <parameter name="tree_model">
@@ -1149,8 +1149,6 @@ acceptable return value for this string.
 </parameter>
 </parameters>
 <return> The string.
-
-Since: 2.2
 </return>
 </function>
 
@@ -1689,7 +1687,7 @@ the place determined by @path.
 
 @see add_ui_separator().
 
-Since: 2.4
+@newin2p4
 
 </description>
 <parameters>
@@ -1981,7 +1979,7 @@ Same as gtk_text_iter_forward_search(), but moves backward.
     This may have been explicitly set by set_image()
     or specified as a stock item to the constructor.
 
-    Since: 2.6
+    @newin2p6
 
   </description>
   <parameters>
@@ -2039,7 +2037,7 @@ Same as gtk_text_iter_forward_search(), but moves backward.
     The stock_id property only has an effect if not
     overridden by &quot;label&quot; and &quot;icon_widget&quot; properties.
 
-    Since: 2.4
+    @newin2p4
 
   </description>
   <parameters>
