@@ -1,4 +1,12 @@
 2005-11-30  Murray Cumming <murrayc@murrayc.com>
+
+	* docs/index.html: Change deprecated link to link to 
+	deprecated and new pages page.
+	* gdk/src/gdk_docs_override.xml:
+	* gtk/src/gtk_docs_override.xml: Change Since: to 
+	our @newin tags.
+
+2005-11-30  Murray Cumming <murrayc@murrayc.com>
   
 	* configure.in:
 	* gtk/gtkmmconfig.h.in: Check for the mkifofs() 
